css/style.css
html {
    height: 100%;
}

body { 
    margin:0;
    padding:0;
    overflow: hidden;
    height: 100%;
}

a {
    display: inline-block;
    text-decoration: none;
    color: white;
    font-size: 1.5em;
}

.fa {
    color: #586069;
}

.fa:hover {
    color: #797E89;
}

.leaflet-top{
    top: 60px;
}

#map { 
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.topbar {
    position: absolute;
    top: 0;
    left: 0;
    height: 50px;
    width: 100%;
    color: white;
    background-color: #1B2530;
    font-family: 'Open Sans', sans-serif;
    z-index: 5;
}

.title {
    padding-left: 10px;
    padding-top: 10px;
}

.title-main{
    font-size: 1.7em;
    color: rgb(254,67,101);
    margin-top: 10px;
    font-weight: 300;
}

.title-rest {
    font-size: 0.8em;
    font-weight: 300;
}

.btn-bar {
    position: absolute;
    right: 0;
    top: 0;
    height: 50px;
    list-style: none;
    padding: 0;
    margin: 0;
}

.btn-bar-btn {
    height: 50px;
    width: 50px;
    font-size: 2em;
    background-color: rgb(254,67,101);
}

.btn-bar-btn i {
    position: relative;
    top: 3px;
    left: 12px;
    color: #1B2530;
}


.off-canvas {
    position: fixed;
    top: 50px;
    right: -250px;
    bottom: 0;
    width: 200px;
    color: white;
    padding-left: 5px;
    padding-top: 10px;
    background-color: #2A3B4C;
    font-family: 'Open Sans', sans-serif;
    z-index: 5;
    -webkit-transition: 0.3s ease-in;
}

.off-canvas.expanded {
    -webkit-transform: translate3d(-250px, 0, 0);
}

.off-canvas ul {
    position: absolute;
    top: 50px;
    right: 0;
    list-style: none;
    padding-left: 5px;
    margin: 0;
    width: 200px;
}

#menu {
    overflow: hidden;
}

.menu-item {
    cursor: pointer;
    padding: 10px;
    border-top: 1px solid #586069;
    border-bottom: 1px solid #1B2530;
}

.menu-item:first-child {
    border-top: none;
}

.menu-item:last-child {
    border-bottom: none;
}

.menu-item a {
    font-size: 1em;
}

.submenu {
    height: 100%;
    width: 200px;
    background-color: #2A3B4C;
    -webkit-transition: 0.2s ease-in;
}

.menu-level-1 {
    z-index: 1;
}

.menu-level-2 {
    z-index: 2;
    -webkit-transform: translateX(250px);
}

.menu-level-3 {
    z-index: 3;
    -webkit-transform: translateX(250px);
}

.menu-active {
    -webkit-transform: translateX(0);
}



#trails {
    overflow-y: scroll;
    overflow-x: hidden;
}

.trail-desc {
    display: block;
    font-size: 0.6em;
    padding-top: 5px;
}

.trail-name {
    margin-left: 5px;
}

.trail-rating-black {
    color: black;
    font-size: 1.5em;
}

.trail-rating-double-black {
    color: black;
    font-size: 1.5em;
    letter-spacing: -0.3em;
}

.trail-rating-blue {
    color: blue;
    position: relative;
    top: 7px;
    font-size: 2.3em;
}

.trail-rating-green, .trail-rating-road {
    color: green;
    position: relative;
    top: 7px;
    font-size: 2.3em;
}

#trails li {
    display: none;
}

#trails.filter-none li,
#trails.filter-maparea-cbt .category-maparea-cbt,
#trails.filter-maparea-mount-shadows .category-maparea-mount-shadows,
#trails.filter-maparea-moonraker .category-maparea-moonraker,
#trails.filter-maparea-mount-seven .category-maparea-mount-seven,
#trails.filter-rating-green .category-rating-green,
#trails.filter-rating-blue .category-rating-blue,
#trails.filter-rating-black .category-rating-black,
#trails.filter-rating-double-black .category-rating-double-black,
#trails.filter-distance-lt2 .category-distance-lt2,
#trails.filter-distance-2to5 .category-distance-2to5,
#trails.filter-distance-gt5 .category-distance-gt5 {
    display: block;
}

#gcclogo {
    position: absolute;
    bottom: 1em;
    left: 1em;
    height: 50px;
    width: 50px;
    background: url('../images/gc2_logo.png') top left no-repeat;
    background-size: 50px 50px;
}

